--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ body { background: #f6f7fa; }
 .featured-card-thumb-empty i { position: absolute; top: 50%; margin: -12px 0 0 -12px; }
 .featured-card-right { padding-top: 4px; }
 .featured-card-title { font-weight: 600; font-size: 16px; }
-.featured-card-more { display: none; background-image: linear-gradient(90deg, #be1e1e 0%, #ff0000 100%);  color: #fff; padding: 8px 20px; position: absolute; right: -20px; bottom: -20px; }
+.featured-card-more { display: none; background-image: linear-gradient(90deg, #be1e1e 0%, #ff0000 100%); color: #fff; padding: 8px 20px; position: absolute; right: -10px; bottom: -10px; }
 .featured-card-more:hover { color: #fff; padding-right: 26px; }
 
 .blog-card { background: #fff; display: flex; min-height: 620px; position: relative; margin-bottom: 100px; box-shadow: 0 0 0 1px #12376914,0 1px 1px #1237690a,0 3px 3px #12376908,0 6px 4px #12376905,0 11px 4px #12376903; }
